Fixed timeline-line on mobile and being always centered

--- a/force-app/main/activityTimeline/lwc/tagActivityTimelineItem/tagActivityTimelineItem.css
+++ b/force-app/main/activityTimeline/lwc/tagActivityTimelineItem/tagActivityTimelineItem.css
@@ -1,11 +1,19 @@
-.hoverBtn:hover {
-	box-shadow: 0 0 0 0.1em #DDDBDA;
-	/* TODO add color used on line between rows */
+.row {
+	margin-top: 1.4em;
+	z-index: 100;
 }
 
-.loadMoreBtn {
-	z-index: 100;
-	/* padding-left: 1.7em; */
+.stripe {
+	/* position: absolute; */
+	/* border-left: 0.2em solid red; */
+	width: 0.2em;
+	background-color: red;
+	margin: 0 auto;
+	height: 100%;
+	min-height: 100%;
+	top: 0;
+	bottom: 0;
+	z-index: 0;
 }
 
 .table {
